# knowforge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  index.html  opencode.json  package-lock.json  package.json  vite.config.ts
.cursor/rules/: frontend-app-shell.mdc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.opencode/: worklog-instructions.md
.opencode/plugins/: worklog-session-start.js
.qoder/rules/: ModularCodingGuard.md  ProjectDevelopmentProtocol.md
docs/worklog/: 2026-06-16.md
patches/: @milkdown+preset-commonmark+7.20.0.patch
plan/: INDEX.md
resources/onboarding/: sample_challenges.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: link_rec_lexical_noise_cn.txt  link_rec_lexical_noise_en.txt  vendor_cn_stopwords_for_link_rec.txt  vendor_en_stopwords_for_link_rec.txt
src-tauri/src/: ai_conversations.rs  builtin_embed.rs  challenge_feedback.rs  challenge_prompts.rs  challenge_review.rs  cognitive_push.rs  cognitive_report.rs  depth_decisions.rs  discovery_confirm.rs  growth_story.rs  knowforge_analytics.rs  latent_paragraphs.rs  lib.rs  link_recommendation.rs  main.rs  note_privacy.rs  onboarding.rs  passive_highlight.rs  rebuild_progress.rs  semantic_index.rs  thought_parser.rs  thought_reconcile.rs  thought_retrieval.rs  topic_network.rs  understanding_graph.rs  vault_config.rs  vault_context_search.rs  vault_thoughts_db.rs  workspace_text_search.rs  writing_coach.rs
src-tauri/src/llm/: agent_loop.rs  approval.rs  context_guard.rs  memory.rs  mod.rs  ollama.rs  plan_approval.rs  planning.rs  provider.rs  provider_impl.rs  provider_ollama.rs  provider_openai.rs  tiered.rs  tool_result_processor.rs
src-tauri/src/llm/memory/: extraction.rs  injection.rs  merge.rs  mod.rs  tests.rs  types.rs  workspace.rs
src-tauri/src/skills/: commands.rs  loader.rs  mod.rs  registry.rs  runtime.rs  skill_tool.rs  types.rs
src-tauri/src/tools/: audit.rs  commands.rs  context.rs  mod.rs  path_safety.rs  privacy.rs  registry.rs  types.rs  validation.rs
src-tauri/src/tools/built_in/: graph_ops.rs  link_ops.rs  memory_ops.rs  mod.rs  note_ops.rs  pdfium_manager.rs  plan_step_ops.rs  thought_ops.rs  tool_result_recall.rs  vault_search.rs  web_download.rs  web_ops.rs  webview_renderer.rs
src-tauri/src/tools/built_in/web_search/: aliyun_opensearch.rs  bing.rs  mod.rs  searxng.rs  tavily.rs
src/components/: ActivityBar.tsx  AiAssistantMarkdown.tsx  AiConversationPanel.css  AiConversationPanel.tsx  AiConversationToolbar.tsx  AiLlmSettingsModal.css  AiLlmSettingsModal.tsx  AiNotConfiguredGuide.css  AiNotConfiguredGuide.tsx  AiPlanApprovalDialog.css  AiPlanApprovalDialog.tsx  AiReplyContextSources.css  AiReplyContextSources.tsx  AiToolApprovalDialog.css  AiToolApprovalDialog.tsx  AppTopToolbar.tsx  CandidatePromoteCard.tsx  ChallengeFeedbackBar.tsx  ChallengeReviewInline.css  ChallengeReviewInline.tsx  ChallengeReviewPanel.css  EditorView.tsx  (+86 more)
(+91 files in other folders)
