[package]
name = "knowforge"
version = "0.5.1"
description = "Knowforge desktop app"
authors = ["caichangqing"]
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0"
repository = "https://github.com/caichangqing/knowforge"

[lib]
name = "knowforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# tauri-build 版本号独立于 tauri crate，2.11 线对应 tauri-build 2.6.x
tauri-build = { version = "2.6", features = [] }

[dependencies]
# 与前端 @tauri-apps/api 保持同一 minor（Tauri CLI 会校验），勿只写 major=2 导致与 npm 漂移
tauri = { version = "2.11", features = ["macos-private-api"] }
tauri-plugin-dialog = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
notify-debouncer-mini = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
serde_yaml = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
candle-core = { version = "0.8", default-features = false }
candle-nn = { version = "0.8", default-features = false }
candle-transformers = { version = "0.8", default-features = false }
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
aho-corasick = "1"
dirs = "6"

[dev-dependencies]
tempfile = "3"
